@@ -1,3 +1,6 @@
+2003-05-29  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
+      * vtk/vtkGdcmReader[cxx|h] preparation addons for loading volumes.
+
 2003-05-28  Eric Boix <Eric.Boix@creatis.insa-lyon.fr>
       * When compiling with distutils (see setup.py) the C++ compiler is
         called with different flags than the default ones (with automake).
